<resources>
    <string name="app_name">FitnessAdmin</string>

    <string name="logout">Logout</string>

    <string name="ml">ml</string>
    <string name="kg">kg</string>
    <string name="cal">cal</string>
    <string name="cm">cm</string>
    <string name="sec">sec</string>
    <string name="min">min</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="level_light">Light</string>
    <string name="level_medium">Medium</string>
    <string name="level_hard">Hard</string>

    <string name="level">Level</string>
    <string name="calories">Calories</string>
    <string name="level_1">1</string>
    <string name="level_2">2</string>
    <string name="level_3">3</string>
    <string name="level_4">4</string>
    <string name="level_5">5</string>

    <string name="menu_clients">Clients</string>
    <string name="menu_exercises">Exercises</string>

    <string name="section_my_clients">My Clients:</string>
    <string name="section_my_exercises">My Exercises:</string>

    <string name="edit">Edit</string>

    <string name="no_data_message">No data</string>

    <string name="edit_exercise_title_add">Add exercise</string>
    <string name="edit_exercise_title_edit">Edit exercise</string>
    <string name="edit_exercise_name_hint">Name</string>
    <string name="edit_exercise_description_hint">Description</string>
    <string name="edit_exercise_comment_hint">Comments (optional)</string>
    <string name="edit_exercise_time_hint">Time (seconds)</string>
    <string name="edit_exercise_save">Save</string>
    <string name="edit_exercise_cancel">Cancel</string>
    <string name="edit_exercise_delete">Delete</string>
    <string name="total_time">Total time: %1$s</string>

    <string name="authentication_login">Login</string>
    <string name="authentication_register">Register</string>
    <string name="authentication_no_account">Have no account? Register now.</string>
    <string name="authentication_have_account">Have account? Login now.</string>
    <string name="authentication_login_credentials_error">Invalid credentials</string>
    <string name="authentication_email">E-mail</string>
    <string name="authentication_password">Password</string>
    <string name="authentication_repeat_password">Repeat password</string>
    <string name="authentication_name">Name</string>
    <string name="authentication_nickname">Nickname</string>

    <string name="authentication_register_general_error">Error happened. Please try again later</string>
    <string name="authentication_register_email_error">Please enter e-mail</string>
    <string name="authentication_register_password_error">Please enter password. Min length is 6 symbols</string>
    <string name="authentication_register_password_repeat_error">Passwords do not match</string>
    <string name="authentication_register_name_error">Please enter your name</string>
    <string name="authentication_register_nickname_error">Please enter your nickname</string>

    <string name="client_details_no_data">No data set</string>
    <string name="client_details_goal">Goal weight: %1$s kg\nGoal calories: %2$s cal\nGoal water: %3$s ml</string>
    <string name="client_details_gender">Gender: %1$s</string>
    <string name="client_details_height">Height: %1$s</string>
    <string name="client_details_weight">Weight: %1$s</string>
    <string name="client_details_fitness_level">Fitness level: %1$s</string>
    <string name="client_details_goal_water">Goal water: %1$s</string>
    <string name="client_details_goal_weight">Goal weight: %1$s</string>
    <string name="client_details_goal_calories">Goal calories: %1$s</string>
    <string name="client_details_manage_workout_plan">Manage workout plan</string>
    <string name="client_details_chat">Go to chat</string>

    <string name="workout_plan_save">Save</string>
    <string name="workout_plan_delete">Delete</string>
</resources>