<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/level" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/fitnessLevelGroup"
        app:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/fitnessLevel1"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level_1"
            android:textAlignment="center" />

        <com.google.android.material.chip.Chip
            android:id="@+id/fitnessLevel2"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level_2"
            android:textAlignment="center" />

        <com.google.android.material.chip.Chip
            android:id="@+id/fitnessLevel3"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level_3"
            android:textAlignment="center" />

        <com.google.android.material.chip.Chip
            android:id="@+id/fitnessLevel4"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level_4"
            android:textAlignment="center" />

        <com.google.android.material.chip.Chip
            android:id="@+id/fitnessLevel5"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level_5"
            android:textAlignment="center" />
    </com.google.android.material.chip.ChipGroup>
</LinearLayout>