<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/clientName"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/SectionLabelTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/genderText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Anastasiya" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/genderText"
        style="@style/AppMediumGreyTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@id/heightText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/clientName"
        app:layout_constraintTop_toBottomOf="@id/clientName"
        tools:text="@string/client_details_gender" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/heightText"
        style="@style/AppMediumGreyTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@id/weightText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/clientName"
        app:layout_constraintTop_toBottomOf="@id/genderText"
        tools:text="@string/client_details_height" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/weightText"
        style="@style/AppMediumGreyTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@id/manageWorkoutPlanButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/clientName"
        app:layout_constraintTop_toBottomOf="@id/heightText"
        tools:text="@string/client_details_weight" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/manageWorkoutPlanButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/client_details_manage_workout_plan"
        app:layout_constraintBottom_toTopOf="@id/splitter"
        app:layout_constraintEnd_toStartOf="@id/chatButton"
        app:layout_constraintStart_toStartOf="@id/clientName"
        app:layout_constraintTop_toBottomOf="@id/weightText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/chatButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/client_details_chat"
        app:layout_constraintBottom_toBottomOf="@id/manageWorkoutPlanButton"
        app:layout_constraintEnd_toEndOf="@id/clientName"
        app:layout_constraintStart_toEndOf="@id/manageWorkoutPlanButton"
        app:layout_constraintTop_toTopOf="@id/manageWorkoutPlanButton" />

    <View
        android:id="@+id/splitter"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@id/statisticsContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/manageWorkoutPlanButton" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        android:indeterminateTint="@color/primary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <FrameLayout
        android:id="@+id/statisticsContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splitter" />

</androidx.constraintlayout.widget.ConstraintLayout>